Added some code comments + fixed small errors in the generated code

--- a/L10n.playground/Resources/Localizable.strings
+++ b/L10n.playground/Resources/Localizable.strings
@@ -1,8 +1,7 @@
-"alert_title" = "Alert Title";
-"alert_message" = "Alert Body";
+"alert_title" = "Title of the alert";
+"alert_message" = "Some alert body there";
 
 "greetings" = "Hello, my name is %@ and I'm %d";
 
 "apples.count" = "You have %d apples";
 "bananas.owner" = "Those %d bananas belong to %@.";
-
