--- a/UnitTests/fixtures/LocUTF8.strings
+++ b/UnitTests/fixtures/LocUTF8.strings
@@ -6,7 +6,7 @@
 "apples.count" = "Vous avez %d pommes";
 "bananas.owner" = "Ces %d bananes appartiennent à %@.";
 
-"object.ownership" = "Ce sont les %1$d %2$@ de %3$@.";
+"ObjectOwnership" = "Ce sont les %1$d %2$@ de %3$@.";
 
 "settings.navigation-bar.title.even.deeper" = "Paramètres";
 "SETTINGS.USER_PROFILE_SECTION.HEADER_TITLE" = "Profil de l'utilisateur Paramètres";
