feat: escape reserved words

--- a/UnitTests/fixtures/LocUTF8.strings
+++ b/UnitTests/fixtures/LocUTF8.strings
@@ -8,6 +8,7 @@
 
 "ObjectOwnership" = "Ce sont les %1$d %2$@ de %3$@.";
 
+"settings.navigation-bar.self" = "Quelques mots-clés réservés";
 "settings.navigation-bar.title.even.deeper" = "Paramètres";
 "SETTINGS.USER_PROFILE_SECTION.HEADER_TITLE" = "Profil de l'utilisateur Paramètres";
 "seTTings.uSer-proFile-sectioN.footer_text" = "Ici, vous pouvez modifier certains paramètres de profil d'utilisateur.";
