--- a/UnitTests/fixtures/LocStructuredOnly.strings
+++ b/UnitTests/fixtures/LocStructuredOnly.strings
@@ -1,3 +1,4 @@
+"settings.navigation-bar.self" = "Some Reserved Keyword there";
 "settings.navigation-bar.title.even.deeper" = "Settings";
 "SETTINGS.USER_PROFILE_SECTION.HEADER_TITLE" = "User Profile Settings";
 "seTTings.uSer-proFile-sectioN.footer_text" = "Here you can change some user profile settings.";
