--- a/Tests/Fixtures/Resources/Strings/LocMultiline.strings
+++ b/Tests/Fixtures/Resources/Strings/LocMultiline.strings
@@ -7,3 +7,6 @@ multi\
 "SINGLELINE2"     = "another single line";
 "multiLine\
 Key" = "test";
+
+"ending.with." = "Ceci n'est pas une pipe.";
+"..some..dots.and..empty..components.." = "Veni, vidi, vici";
