--- a/Tests/Fixtures/Resources/Strings/LocPluralAdvanced.stringsdict
+++ b/Tests/Fixtures/Resources/Strings/LocPluralAdvanced.stringsdict
@@ -2,10 +2,64 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
     <dict>
-        <key>multiple.placeholders-and-variables.string-int</key>
+        <key>mixed.placeholders-and-variables.string-int</key>
         <dict>
             <key>NSStringLocalizedFormatKey</key>
             <string>%@ %#@has_rating@</string>
+            <key>has_rating</key>
+            <dict>
+                <key>NSStringFormatSpecTypeKey</key>
+                <string>NSStringPluralRuleType</string>
+                <key>NSStringFormatValueTypeKey</key>
+                <string>d</string>
+                <key>zero</key>
+                <string>has no rating</string>
+                <key>one</key>
+                <string>has one rating</string>
+                <key>other</key>
+                <string>has %d ratings</string>
+            </dict>
+        </dict>
+        <key>mixed.placeholders-and-variables.string-positional2int</key>
+        <dict>
+            <key>NSStringLocalizedFormatKey</key>
+            <string>%@ %2$#@has_rating@</string>
+            <key>has_rating</key>
+            <dict>
+                <key>NSStringFormatSpecTypeKey</key>
+                <string>NSStringPluralRuleType</string>
+                <key>NSStringFormatValueTypeKey</key>
+                <string>d</string>
+                <key>zero</key>
+                <string>has no rating</string>
+                <key>one</key>
+                <string>has one rating</string>
+                <key>other</key>
+                <string>has %d ratings</string>
+            </dict>
+        </dict>
+        <key>mixed.placeholders-and-variables.string-positional3int</key>
+        <dict>
+            <key>NSStringLocalizedFormatKey</key>
+            <string>%@ %3$#@has_rating@</string>
+            <key>has_rating</key>
+            <dict>
+                <key>NSStringFormatSpecTypeKey</key>
+                <string>NSStringPluralRuleType</string>
+                <key>NSStringFormatValueTypeKey</key>
+                <string>d</string>
+                <key>zero</key>
+                <string>has no rating</string>
+                <key>one</key>
+                <string>has one rating</string>
+                <key>other</key>
+                <string>has %d ratings</string>
+            </dict>
+        </dict>
+        <key>mixed.placeholders-and-variables.positionalstring-positional3int</key>
+        <dict>
+            <key>NSStringLocalizedFormatKey</key>
+            <string>%1$@ %3$#@has_rating@</string>
             <key>has_rating</key>
             <dict>
                 <key>NSStringFormatSpecTypeKey</key>
